# multipac_testbench_calibrate_racks

./: .gitignore  CHANGELOG.md  INSTALL.md  README  README.md  main.py  pyproject.toml  release.py
.github/workflows/: pylint.yml
data/: rack_calibration.txt
data/measurements/E1/: MesureE1-100MHz.txt  MesureE1-120MHz.txt  MesureE1-140MHz.txt  MesureE1-160MHz.txt  MesureE1-180MHz.txt  MesureE1-80MHz.txt  MesureE1-88MHz.txt
data/measurements/E2/: MesureE2-100MHz.txt  MesureE2-120MHz.txt  MesureE2-140MHz.txt  MesureE2-160MHz.txt  MesureE2-180MHz.txt  MesureE2-80MHz.txt  MesureE2-88MHz.txt
data/measurements/E3/: MesureE3-100MHz.txt  MesureE3-120MHz.txt  MesureE3-140MHz.txt  MesureE3-160MHz.txt  MesureE3-180MHz.txt  MesureE3-80MHz.txt  MesureE3-88MHz.txt
data/measurements/E4/: MesureE4-100MHz.txt  MesureE4-120MHz.txt  MesureE4-140MHz.txt  MesureE4-160MHz.txt  MesureE4-180MHz.txt  MesureE4-80MHz.txt  MesureE4-88MHz.txt
data/measurements/E5/: MesureE5-100MHz.txt  MesureE5-120MHz.txt  MesureE5-140MHz.txt  MesureE5-160MHz.txt  MesureE5-180MHz.txt  MesureE5-80MHz.txt  MesureE5-88MHz.txt
data/measurements/E6/: MesureE6-100MHz.txt  MesureE6-120MHz.txt  MesureE6-140MHz.txt  MesureE6-160MHz.txt  MesureE6-180MHz.txt  MesureE6-80MHz.txt  MesureE6-88MHz.txt
data/measurements/E7/: MesureE7-100MHz.txt  MesureE7-120MHz.txt  MesureE7-140MHz.txt  MesureE7-160MHz.txt  MesureE7-180MHz.txt  MesureE7-80MHz.txt  MesureE7-88MHz.txt
data/results/: E1_fit_calibration.csv  E2_fit_calibration.csv  E3_fit_calibration.csv  E4_fit_calibration.csv  E5_fit_calibration.csv  E6_fit_calibration.csv  E7_fit_calibration.csv
src/: __init__.py  helper.py  rack.py  set_of_racks.py  single_measurement.py
src/multipac_testbench_calibrate_racks/: helper.py  influence_of_calibration_error.py  main.py  rack.py  set_of_racks.py  single_measurement.py
